[package]
name = "keeline"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
clap = { version = "4.6.0", default-features = false, features = ["derive", "help", "std", "usage"] }
regex = { version = "1.12.3", default-features = false, features = ["std"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
toml = { version = "1.1.0", default-features = false, features = ["parse", "serde", "std"] }
walkdir = { version = "2.5.0", default-features = false }
